# VirGL-Overlay

./: .gitignore  settings.gradle
app/: build.gradle  lint.xml  proguard-rules.pro
app/src/androidTest/java/com/catfixture/virgloverlay/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
app/src/main/cpp/axs/: Statistics.c  Statistics.h  TMPShrinker.c  TMPShrinker.h
app/src/main/cpp/src/: virgl_util.c  vrend_debug.c  vrend_formats.c  vrend_object.c  vrend_renderer.c  vrend_renderer.h  vrend_shader.c  vrend_winsys_egl.c  vrend_winsys_gbm.h
app/src/main/cpp/src/epoxy/: dispatch_common.c  gen_dispatch.py
app/src/main/cpp/src/gl4es/: decompress.c
app/src/main/cpp/vtest/: vtest_protocol.h  vtest_renderer.c  vtest_server.c
app/src/main/java/com/catfixture/virgloverlay/core/: App.java  AppContext.java  CommonContext.java  IService.java
app/src/main/java/com/catfixture/virgloverlay/core/android/: AndroidUtils.java  IActivityLaunchable.java  IPermissionGrantable.java  UpdateDTO.java  UpdateInfo.java
app/src/main/java/com/catfixture/virgloverlay/core/debug/: Dbg.java
app/src/main/java/com/catfixture/virgloverlay/core/email/: ShareDialog.java
app/src/main/java/com/catfixture/virgloverlay/core/fio/: Fio.java
app/src/main/java/com/catfixture/virgloverlay/core/impl/: ServerController.java
app/src/main/java/com/catfixture/virgloverlay/core/input/: Devices.java  IInputProvider.java  InputController.java  InputProvider.java  MainInputMethodService.java  MainInputProvider.java
app/src/main/java/com/catfixture/virgloverlay/core/ipc/: IServerRemoteCallback.java  IServerRemoteService.java  IServerStopRemoteCallback.java  ServiceParcelable.java
app/src/main/java/com/catfixture/virgloverlay/core/objProvider/: IObjectProvider.java  ITypedProvider.java  SimpleObjectProvider.java  SimpleTypedProvider.java
app/src/main/java/com/catfixture/virgloverlay/core/overlay/: IOverlayFragment.java  MainControlsOverlayFragment.java  OverlayInitializer.java  OverlayManager.java  RenderingOverlayFragment.java  StatisticsOverlay.java
app/src/main/java/com/catfixture/virgloverlay/core/process/: AutoIDService.java  ProcUtils.java
app/src/main/java/com/catfixture/virgloverlay/core/types/: AutoResetEvent.java  Event.java
app/src/main/java/com/catfixture/virgloverlay/core/utils/: BooleanHolder.java
app/src/main/java/com/catfixture/virgloverlay/core/vgobridge/: IBinaryBufferProvider.java  IVGOBridgeEvent.java  VGOBridge.java  VGOBridgeBinaryBuffer.java  VGOBridgeBuffer.java  VGOBridgeByteEvent.java  VGOBridgeEvents.java  VGOBridgeFrame.java  VGOBridgeHandle.java  VGOBridgeIntEvent.java  VGOBridgeMarshall.java  VGOBridgeProtocol.java  VGOScanCodes.java
app/src/main/java/com/catfixture/virgloverlay/core/window/: NativeWindow.java  WindowUtils.java
app/src/main/java/com/catfixture/virgloverlay/data/: ConfigData.java  ConfigProfile.java  GenericConfig.java  MainConfigData.java
app/src/main/java/com/catfixture/virgloverlay/ui/custom/: WarningComponent.java
app/src/main/res/drawable/: fx_pnb_pan.xml  fx_tc_circle_btn.xml  fx_tc_cross_btn.xml  fx_tc_rect_rnd_btn.xml  overlay_controls_bg.xml  selection.xml  toolbar_text_grad.xml
app/src/main/res/layout/: activity_main.xml  activity_virgl.xml  basic_spinner_item.xml  bool_setting_item.xml  button_with_status_setting_item.xml  editable_button_element.xml  editable_common_element.xml  editable_cross_element.xml  editable_mouse_zone_element.xml  editable_stick_element.xml  fragment_about.xml  fragment_services.xml  fragment_settings.xml  fragment_settings_rendering.xml  input_window_element_editor.xml  int_setting_item.xml  keyboard_view.xml  multigroup_setting_item.xml  notification_layout.xml  overlay_panel_layout.xml  overlay_settings_panel.xml  overlay_statistics.xml  service_item.xml  spinner_item.xml  tab_item.xml  tab_item_small.xml  text_setting_item.xml  touch_controls_editor.xml  touch_controls_list_item.xml  touch_controls_list_item_with_icon.xml  warning_component.xml
app/src/main/res/raw/: files.list  key.codes  t  vgo  vgo_bridge_service_android_root_install_check.sh  vgo_bridge_service_android_root_installer.sh  vgo_bridge_service_install_check.sh  vgo_bridge_service_installer.sh  vo
app/src/main/res/values/: attr.xml  colors.xml  fx_kb_colors.xml  fx_styles.xml  fx_tc_colors.xml  statistics_colors.xml  statistics_styles.xml  strings.xml  styles.xml  themes.xml
app/src/main/res/xml/: file_paths.xml
app/src/test/java/com/catfixture/virgloverlay/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
(+172 files in other folders)
